--- a/mysql-pod.yaml
+++ b/mysql-pod.yaml
@@ -2,11 +2,16 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mysql
-  labels: 
-    name: mysql
+  namespace: mysql-ns
+  labels:
+    app: mysql
 spec:
   containers:
-  - name: mysql
-    image: 376672410739.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2/assign2-mysql
-    ports:
+    - image: 376672410739.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:assign2-mysql
+      name: mysql
+      ports:
       - containerPort: 3306
+        protocol: TCP
+      env:
+      - name: MYSQL_ROOT_PASSWORD
+        value: passwd123
