--- a/webapp-pod.yaml
+++ b/webapp-pod.yaml
@@ -2,13 +2,20 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: webapp
+  namespace: webapp-ns
   labels: 
-    name: webapp
+    app: employees
 spec:
   containers:
   - name: webapp
-    image: 376672410739.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2/assign2-webapp
+    image: 376672410739.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:assign2-webapp
     ports:
-      - containerPort: 8080
-    imagePullSecrets:
-      - name: assign2secret
+    - containerPort: 8080
+      protocol: TCP
+    env:
+    - name: DBPORT
+      value: "3306"
+    - name: DATABASE
+      value: "employees"
+    - name: DBPWD
+      value: "password123"
