updated env variables with DBHOST and DBUSER

--- a/webapp-pod.yaml
+++ b/webapp-pod.yaml
@@ -13,6 +13,10 @@ spec:
     - containerPort: 8080
       protocol: TCP
     env:
+    - name: DBHOST
+      value: 10.244.0.5
+    - name: DBUSER
+      value: root
     - name: DBPORT
       value: "3306"
     - name: DATABASE
