--- a/mysql-service.yaml
+++ b/mysql-service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webapp
+  name: mysql
   labels:
-    app: employees
-    namespace: webapp
+    app: mysql
 spec:
-  type: NodePort
   ports:
-  - port: 8080
-    targetPort: 8080
-    nodePort: 30000
+  - port: 3306
+    targetPort: 3306
   selector:
-    app: employees
+    app: mysql
